@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mcollective-0.4.5 (08 Jun 2010)
+
+  08 Jun 2010; Lance Albertson <ramereth@gentoo.org>
+  -mcollective-0.4.2.ebuild, -mcollective-0.4.3.ebuild,
+  -mcollective-0.4.4.ebuild, +mcollective-0.4.5.ebuild:
+  version bump, switch to ruby-ng.eclass
+
 *mcollective-0.4.4 (21 Apr 2010)
 
   21 Apr 2010; Lance Albertson <ramereth@gentoo.org>
